# telegram-claude-code-vps-manager

./: .env.example  .env.production.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  LICENSE  MODEL_SWITCHING_GUIDE.md  README.md  STATUS.md  STRUCTURE.tree  pyproject.toml  requirements.txt
.github/workflows/: test.yml
deploy/: healthcheck.sh  install.sh  jarvis-dev.service  jarvis.service  logrotate.conf
docs/prompts/: JARVIS_MK1_Lite_Technical_Specification.md
prompts/: system.md
scripts/: README.md  test_files.py  test_files_e2e.py  test_voice.py  test_wide_context.py
scripts/test_data/: sample.json  sample.md  sample.py  sample.txt
src/jarvis_mk1_lite/: __init__.py  __main__.py  bot.py  bridge.py  chunker.py  config.py  exceptions.py  file_processor.py  file_sender.py  metrics.py  safety.py  transcription.py
tests/: README.md  __init__.py  conftest.py  test_bot.py  test_bot_v120.py  test_bridge.py  test_chunker.py  test_config.py  test_file_processor.py  test_file_sender.py  test_integration.py  test_integration_e2e.py  test_main.py  test_main_v120.py  test_metrics.py  test_retry.py  test_safety.py  test_transcription.py  test_verbose.py
tests/live_e2e/: __init__.py  config.py  conftest.py  helpers.py  test_advanced.py  test_commands.py  test_file_download.py  test_model_switching.py  test_model_switching_live.py  test_multitasking.py  test_safety.py  test_verbose.py
