[tool.poetry]
name = "jarvis-mk1-lite"
version = "1.3.1"
description = "Minimalist Telegram interface for Claude Code on Ubuntu VPS"
authors = ["JARVIS Team"]
readme = "README.md"
license = "MIT"
packages = [{include = "jarvis_mk1_lite", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.15.0"
pydantic = "^2.10.3"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.1"
structlog = "^24.4.0"
telethon = { version = "^1.37", optional = true }
pymupdf = { version = "^1.24.0", optional = true }

[tool.poetry.extras]
voice = ["telethon"]
pdf = ["pymupdf"]
all = ["telethon", "pymupdf"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
pytest-json-report = "^1.5.0"
pytest-rerunfailures = "^14.0"
pytest-timeout = "^2.3.1"
mypy = "^1.13.0"
black = "^24.10.0"
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | claude-automation
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "claude-automation",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [
    "claude-automation",
    ".venv",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/jarvis_mk1_lite --cov-report=term-missing"

[tool.coverage.run]
source = ["src/jarvis_mk1_lite"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
